[package]
authors = [""]
description = "Matrix encryption library, for Deno"
edition = "2021"
homepage = "https://github.com/notTJ/matrix-rust-sdk-deno"
keywords = ["matrix", "chat", "messaging", "ruma", "nio"]
license = "Apache-2.0"
name = "matrix-sdk-crypto-deno"
readme = "README.md"
repository = "https://github.com/notTJ/matrix-rust-sdk-deno"
rust-version = "1.60"
version = "0.0.1"

# [package.metadata.docs.rs]
# features = ["docsrs"]
# rustdoc-args = ["--cfg", "docsrs"]

[lib]
crate-type = ["cdylib"]

# [features]
# default = []
# qrcode = ["matrix-sdk-crypto/qrcode"]
# docsrs = []
# tracing = ["tracing-subscriber"]

[dependencies]
matrix-sdk-crypto = { version = "0.5.0" }
matrix-sdk-common = { version = "0.5.0" }
# matrix-sdk-sled = { version = "0.1.0", default-features = false, features = ["crypto-store"] }
ruma = { git = "https://github.com/ruma/ruma", rev = "96155915f", features = ["client-api-c", "js", "rand", "unstable-msc2676", "unstable-msc2677"] }
# vodozemac = {  git = "https://github.com/matrix-org/vodozemac/", rev = "d0e744287a14319c2a9148fef3747548c740fc36" }
serde_json = "1.0.79"
http = "0.2.6"
# zeroize = "1.3.0"
# tracing-subscriber = { version = "0.3", default-features = false, features = ["tracing-log", "time", "smallvec", "fmt", "env-filter"], optional = true }
deno_bindgen = "0.5.1"
serde = { version = "1", features = ["derive"] }

# [build-dependencies]
